--- a/src/Style.css
+++ b/src/Style.css
@@ -87,7 +87,7 @@ i {
   font-size: 25px;
   width: auto;
   cursor: pointer;
-  transform: translate(-50%, -50%);
+  /*transform: translate(-50%, -50%);*/
 }
 
 .logo {
@@ -725,9 +725,10 @@ p {
 }
 .open-menu {
   position: absolute;
-    top: 76%;
+    top: 50%;
     left: 52%;
-    transform: translateY(-50%);
+    /*transform: translateY(-50%);*/
+    transform: translate(-50%, -50%);
 }
 .close-menu {
   color: var(--color1);
@@ -745,14 +746,14 @@ p {
       width: 100%;
       height: 50vh;
       position: fixed;
-      top: 0;
-      right: -100%;
+      top: -100%;
+      right: 0;
       z-index: 100;
       background-color: var(--color3);
-      transition: all 0.2s ease-in-out;
+      transition: all 0.4s ease-in-out;
   }
   .options div {margin-top: 40px;}
    /* .options div #home #erp #road  #study {padding: 10px;}*/
     .open-menu , .close-menu {display: block;}
-    #check:checked ~ .options {right: 0;}
+    #check:checked ~ .options {top: 0;}
 }
