--- a/src/Style.css
+++ b/src/Style.css
@@ -15,6 +15,7 @@
 }
 
 body {
+  -webkit-tap-highlight-color: transparent;
   background-color: var(--bg-color);
   color: var(--font-color);
   font-family: "DM Sans", sans-serif;
